--- a/plugin.xml
+++ b/plugin.xml
@@ -31,11 +31,11 @@ xmlns:android="http://schemas.android.com/apk/res/android"
         <header-file src="src/ios/FirebaseAnalyticsPlugin.h" />
         <source-file src="src/ios/FirebaseAnalyticsPlugin.m" />
 
-        <framework src="Firebase/Core" type="podspec" spec="~> 5.6"/>
+        <framework src="Firebase/Core" type="podspec" spec="4.0.0"/>
     </platform>
 
     <platform name="android">
-        <preference name="FIREBASE_CORE_VERSION" default="16.0.+"/>
+        <preference name="FIREBASE_CORE_VERSION" default="15.0.1"/>
 
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="FirebaseAnalytics">
